# attendance-app

./: README.MD  app.py  pyproject.toml
static/: style.css
templates/: index.html
